cmake_minimum_required(VERSION 3.0.2)

set(SDL_SHARED_ENABLED_BY_DEFAULT OFF CACHE BOOL "Build static SDL2")
option(DIRECTX "Disable DirectX" OFF)
option(RENDER_D3D "Disable Direct3D" OFF)
if(USE_GLEW)
    option(VIDEO_OPENGLES "Disable OpenGL ES if using glew" OFF)
endif()
add_subdirectory(SDL2-2.0.4)
set(SDL2_INCLUDES ${SDL2_SOURCE_DIR}/include PARENT_SCOPE)
set(SDL2_INCLUDES ${SDL2_SOURCE_DIR}/include)

project(SDL2_mixer)
file(REMOVE SDL2_mixer-2.0.1/playmus.c)
file(REMOVE SDL2_mixer-2.0.1/playwave.c)
set(VB SDL2_mixer-2.0.1/external/libvorbis-1.3.3/lib)
set(VB_SOURCES ${VB}/mdct.c ${VB}/smallft.c ${VB}/block.c ${VB}/envelope.c ${VB}/window.c ${VB}/lsp.c ${VB}/lpc.c ${VB}/analysis.c ${VB}/synthesis.c ${VB}/psy.c ${VB}/info.c ${VB}/floor1.c ${VB}/floor0.c ${VB}/res0.c ${VB}/mapping0.c ${VB}/registry.c ${VB}/codebook.c ${VB}/sharedbook.c ${VB}/lookup.c ${VB}/bitrate.c ${VB}/vorbisfile.c)
file(GLOB SDL2_mixer_SOURCES SDL2_mixer-2.0.1/*.c SDL2_mixer-2.0.1/external/libogg-1.3.1/src/*.c ${VB_SOURCES})
add_library(SDL2_mixer STATIC ${SDL2_mixer_SOURCES})
target_include_directories(SDL2_mixer PRIVATE ${SDL2_INCLUDES} SDL2_mixer-2.0.1/external/libogg-1.3.1/include SDL2_mixer-2.0.1/external/libvorbis-1.3.3/include)
target_compile_definitions(SDL2_mixer PRIVATE OGG_MUSIC)
set(SDL2_mixer_INCLUDES ${SDL2_mixer_SOURCE_DIR}/SDL2_mixer-2.0.1 PARENT_SCOPE)

project(SDL2_net)
file(GLOB SDL2_net_SOURCES SDL2_net-2.0.1/SDL*.c)
add_library(SDL2_net STATIC ${SDL2_net_SOURCES})
target_include_directories(SDL2_net PRIVATE ${SDL2_INCLUDES})
set(SDL2_net_INCLUDES ${SDL2_net_SOURCE_DIR}/SDL2_net-2.0.1 PARENT_SCOPE)

project(SDL2_image)
file(REMOVE SDL2_image-2.0.1/external/libpng-1.6.2/pngtest.c)
file(REMOVE SDL2_image-2.0.1/external/libpng-1.6.2/example.c)
file(REMOVE SDL2_image-2.0.1/showimage.c)
file(GLOB SDL2_image_SOURCES SDL2_image-2.0.1/*.c SDL2_image-2.0.1/external/libpng-1.6.2/*.c SDL2_image-2.0.1/external/zlib-1.2.8/*.c)
add_library(SDL2_image STATIC ${SDL2_image_SOURCES})
target_include_directories(SDL2_image PRIVATE ${SDL2_INCLUDES} SDL2_image-2.0.1/external/libpng-1.6.2 SDL2_image-2.0.1/external/zlib-1.2.8)
target_compile_definitions(SDL2_image PRIVATE LOAD_BMP LOAD_GIF LOAD_LBM LOAD_PCX LOAD_PNM LOAD_TGA LOAD_XCF LOAD_XPM LOAD_XV LOAD_PNG)
set(SDL2_image_INCLUDES ${SDL2_image_SOURCE_DIR}/SDL2_image-2.0.1 PARENT_SCOPE)

project(json)
set(JSON_INCLUDES ${json_SOURCE_DIR}/json-2.0.1 PARENT_SCOPE)

project(hashlib2plus)
file(GLOB hashlib2plus_SOURCES ${hashlib2plus_SOURCE_DIR}/hashlib2plus-0.3.4/src/*.cpp)
add_library(hashlib2plus STATIC ${hashlib2plus_SOURCES})
set(hashlib2plus_INCLUDES ${bz2_SOURCE_DIR}/hashlib2plus-0.3.4/src PARENT_SCOPE)

project(bz2)
set(BZ bzip2-1.0.6)
set(BZ_SOURCES ${BZ}/blocksort.c ${BZ}/huffman.c ${BZ}/crctable.c ${BZ}/randtable.c ${BZ}/compress.c ${BZ}/decompress.c ${BZ}/bzlib.c)
file(GLOB bz2_SOURCES ${BZ_SOURCES})
add_library(bz2 STATIC ${bz2_SOURCES})
set(bz2_INCLUDES ${bz2_SOURCE_DIR}/bzip2-1.0.6 PARENT_SCOPE)
set(bz2_INCLUDES ${bz2_SOURCE_DIR}/bzip2-1.0.6)

set(BUILD_SHARED_LIBS OFF CACHE BOOL "Build static freetype")
option(WITH_HarfBuzz "Disable OpenType" OFF)
add_subdirectory(freetype-2.6.5)
set(freetype_INCLUDES ${freetype_SOURCE_DIR}/include PARENT_SCOPE)
set(freetype_INCLUDES ${freetype_SOURCE_DIR}/include)

project(SDL2_ttf)
file(REMOVE SDL2_ttf-2.0.14/showfont.c)
file(REMOVE SDL2_ttf-2.0.14/glfont.c)
file(GLOB SDL2_ttf_SOURCES SDL2_ttf-2.0.14/*.c)
add_library(SDL2_ttf STATIC ${SDL2_ttf_SOURCES})
target_include_directories(SDL2_ttf PRIVATE ${SDL2_INCLUDES} ${freetype_INCLUDES})
set(SDL2_ttf_INCLUDES ${SDL2_ttf_SOURCE_DIR}/SDL2_ttf-2.0.14 PARENT_SCOPE)

if(USE_GLEW)
    project(glew)
    file(GLOB glew_SOURCES glew-2.0.0/src/glew.c)
    add_library(glew STATIC ${glew_SOURCES})
    set(GLEW_LOCAL_INCLUDES ${GLEW_LOCAL_INCLUDES} glew-2.0.0/include)
    if(CMAKE_SYSTEM_NAME STREQUAL "FreeBSD")
        set(GLEW_LOCAL_INCLUDES ${GLEW_LOCAL_INCLUDES} /usr/local/include)
    endif()
    target_include_directories(glew PRIVATE ${GLEW_LOCAL_INCLUDES})
    target_compile_definitions(glew PRIVATE GLEW_NO_GLU GLEW_BUILD)
    set(glew_INCLUDES ${glew_SOURCE_DIR}/glew-2.0.0/include PARENT_SCOPE)
endif()
